added more works

--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@
             <a href="https://nicole-cayambas.github.io/TributePage/" class="work-card" style="background-image: url(images/tribute-page.png);"></a>
             <a href="https://youtu.be/6YhZW-pxtXQ" class="work-card" style="background-image: url(images/SafeMe.png);"></a>
             <a href="https://youtu.be/WzZYcrlhB_U" class="work-card" style="background-image: url(images/getgo.png);"></a>
+            <a href="https://youtube.com/playlist?list=PLuDId9y__HVSVq9hEiTzFtXw4oxIKuvcv" class="work-card" style="background-image: url(images/stopify.png);"></a>
+            <a href="https://nicole-cayambas.github.io/Blackjack/" class="work-card" style="background-image: url(images/blackjack.png);"></a>
         </div>
         <br>
         <div class="arrow-down">
